wtx-macros-tests/tests/fail/bad_res.stderr
error: Response data must end with the `Res` suffix.
 --> tests/fail/bad_res.rs:8:10
  |
8 |   struct ResDSA;
  |          ^^^^^^

error: aborting due to 1 previous error

